# renderStream

./: .gitignore  CMakeLists.txt  README.md
.github/copilot/: .copilotignore  configure  dictionary  prompt-context  snippets
resources/shaders/: basic.fs  basic.vs
src/: CelestialBody.cpp  CelestialBody.h  OrbitSystem.cpp  OrbitSystem.h  Tools.cpp  Tools.h  main.cpp
src/stream/: CMakeLists.txt  Stream.cpp  Stream.h
